Modifica estructura de archivos

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -21,26 +21,29 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
         </div>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
         <nav>
-            <ul>
-                <li><a href="">Ofertas<i class="fa-solid fa-code"></i></a></li>
+            <ul class="lista-superior">
+                <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
             <ul>
-                <li><a href="">Creá tu cuenta</a></li>
-                <li><a href="">Ingresá</a></li>
-                <li><a href="">Mis compras</a></li>
+                <li><a href="">Creá tu cuenta <i class="fas fa-credit-card"></i></a></li>
+                <li><a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </div>
     </header>
-    <main>
-        <img src="/images/img-home-banner.jpg" alt="Banner ofertas" width="100%">
-        <section>
-            <h4>Basado en tu última visita</h4>
-            <article>
+    <main class="home__productos">
+        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner ofertas" width="100%">
+        <section class="seccion__productos">
+            <h4 class="seccion__productos--titulo">Basado en tu última visita</h4>
+            <article class="seccion__productos--tarjeta">
                 <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" width="100%">
                 <p>$6.770</p>
                 <p>40% off</p>
@@ -50,14 +53,17 @@
     </main>
     <footer>
         <article>
+            <i class="fa-solid fa-credit-card"></i>
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
         </article>
         <article>
+            <i class="fa-solid fa-gift"></i>
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
         </article>
         <article>
+            <i class="fa-solid fa-user-shield"></i>
             <h4>Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
         </article>
