Agrega estructura base de HTML - CSS y rutas

--- a/app/views/carrito.html
+++ b/app/views/carrito.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Liebre</title>
+    <title>Mercado Liebre - Carrito</title>
     <!-- CSS -->
     <link href="/css/styles.css" rel="stylesheet">
-    <link href="/css/home.css" rel="stylesheet">
+    <link href="/css/carrito.css" rel="stylesheet">
     <!-- FontAwesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
 </head>
@@ -40,17 +40,8 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
-    <main class="home__productos">
-        <img class="banner" src="/images/img-home-banner.jpg" alt="Banner ofertas" width="100%">
-        <section class="seccion__productos">
-            <h4 class="seccion__productos--titulo">Basado en tu última visita</h4>
-            <article class="seccion__productos--tarjeta">
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" width="100%">
-                <p>$6.770</p>
-                <p>40% off</p>
-                <h5>Cafetera Moulinex</h5>
-            </article>
-        </section>
+    <main>
+        <h1>Carrito</h1>
     </main>
     <footer>
         <article>
